# service-ml-forecast

./: .bumpversion.toml  .flake8  .gitignore  Dockerfile  LICENSE.txt  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: release.yml
.github/workflows/: ci-test-lint.yml  ci.yml  docker-image.yml  python-ci.yml  release.yml
docker/: .dockerignore  Dockerfile  docker-compose.yml
frontend/: .prettierignore  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  rspack.config.js  tsconfig.json
frontend/assets/css/: materialdesignicons.min.css
frontend/src/: index.ts  router.ts  util.ts
frontend/src/common/: constants.ts  theme.ts  util.ts
frontend/src/components/: alert-message.ts  breadcrumb-nav.ts  breadcrumb.ts  configs-table.ts  custom-asset-attribute-picker.ts  custom-duration-input.ts  loading-spinner.ts
frontend/src/pages/: app-layout.ts  pages-config-editor.ts  pages-config-list.ts  pages-not-found.ts  pages-service-unavailable.ts
frontend/src/pages/model-configs/: model-registry.ts  prophet-config.ts  xgboost-config.ts
frontend/src/services/: api-service.ts  auth-service.ts  models.ts
scripts/: __init__.py  tools.py
src/service_ml_forecast/: __init__.py  config.py  dependencies.py  logging.yaml  logging_config.py  main.py
src/service_ml_forecast/api/: api_exception_handlers.py  ml_model_config_api.py  model_config_route.py  openremote_proxy_route.py  openremote_route.py  route_exception_handlers.py  system_route.py  web_route.py
src/service_ml_forecast/app/: config.py  logging_config.py
src/service_ml_forecast/clients/: openremote_proxy_client.py
src/service_ml_forecast/clients/openremote/: client_roles.py  models.py  openremote_client.py  openremote_models.py  openremote_proxy_client.py
src/service_ml_forecast/common/: exceptions.py  fs_util.py  singleton.py  time_util.py
src/service_ml_forecast/integrations/openremote/: asset.py  asset_datapoint_period.py  models.py  openremote_client.py
src/service_ml_forecast/middlewares/: keycloak_middleware.py
src/service_ml_forecast/middlewares/keycloak/: constants.py  decorators.py  middleware.py
src/service_ml_forecast/ml/: backtesting.py  data_processing.py  evaluation_metrics.py  ml_model_provider.py  ml_model_provider_factory.py  ml_provider.py  ml_provider_factory.py  model_provider.py  model_provider_factory.py  prophet_ml_provider.py  prophet_model_provider.py  xgboost_model_provider.py
src/service_ml_forecast/ml_models/: base_model_provider.py  model_provider.py  model_provider_factory.py  model_util.py  prophet_model_provider.py
src/service_ml_forecast/models/: feature_data_wrappers.py  ml_config.py  ml_data_models.py  ml_model_config.py  ml_model_type.py  model_config.py  model_type.py
src/service_ml_forecast/schemas/: model_config.py
src/service_ml_forecast/services/: forecast_scheduler.py  forecast_service.py  ml_config_storage_service.py  ml_job_scheduler.py  ml_model_config_service.py  ml_model_scheduler.py  ml_model_storage_service.py  ml_storage_service.py  model_config_service.py  model_scheduler.py  model_storage_service.py  openremote_data_service.py  openremote_ml_data_service.py  openremote_proxy_service.py  openremote_service.py  training_scheduler.py  training_service.py
src/service_ml_forecast/system/: status_resource.py
src/service_ml_forecast/util/: filesystem_util.py  fs_util.py  singleton.py  time_util.py
tests/: conftest.py  test_openremote_client.py  test_time_util.py
tests/api/: test_keycloak_middleware.py  test_model_config_route.py
tests/clients/openremote/: test_openremote_client.py  test_openremote_client_mock.py
tests/integrations/openremote/: test_openremote_client.py  test_openremote_client_mock.py
tests/ml/: test_prophet_ml_provider.py  test_prophet_model_performance.py  test_prophet_model_provider.py  test_xgboost_model_performance.py  test_xgboost_model_provider.py
tests/ml/resources/: mock-datapoints-power-grid.json  mock_datapoints_tariff.json  prophet-tariff-config.json  prophet-windspeed-config.json  prophet_windspeed_config.json  xgboost-tariff-config.json  xgboost-tariff-future-covariate-config.json  xgboost-windspeed-config.json
tests/ml_models/: mock_datapoints_windspeed.json  prophet_model_config.json  prophet_model_regressor_config.json  test_prophet_model_provider.py
tests/ml_models/resources/: prophet_basic_test_config.json  prophet_regressor_test_config.json  prophet_tariff_config.json
tests/services/: test_ml_config_storage_service.py  test_ml_model_config_service.py  test_ml_model_scheduler.py  test_ml_scheduler.py  test_model_config_service.py  test_model_scheduler.py  test_openremote_service.py  test_training_scheduler.py
ui/: index.html  package-lock.json  package.json  rspack.config.js  tsconfig.json
ui/src/: index.ts  router.ts  util.ts
ui/src/api/: service-client.ts
ui/src/components/: breadcrumb.ts  configs-table.ts  loading-spinner.ts
ui/src/pages/: pages-config-details.ts  pages-config-editor.ts  pages-config-list.ts  pages-config-viewer.ts  pages-not-found.ts
ui/src/services/: api-service.ts  models.ts
