[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "service-ml-forecast"
version = "0.1.0"
description = "Machine Learning Forecast Service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.11",
    "uvicorn>=0.34.0",
    "pyyaml>=6.0.2",
    "tomli>=2.2.1",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-bdd>=8.1.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "flake8>=7.1.2",
    "build>=1.2.2",
]

[project.urls]
"Homepage" = "https://github.com/openremote/service-ml-forecast"
"Bug Tracker" = "https://github.com/openremote/service-ml-forecast/issues"

[tool.setuptools]
packages = ["service_ml_forecast"]
package-dir = {"service_ml_forecast" = "src/service_ml_forecast"}

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'


[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[project.scripts]
service_ml_forecast = "service_ml_forecast.main:app"
