[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "service-ml-forecast"
version = "0.1.0"
description = "Machine Learning Forecast Service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.11",
    "uvicorn>=0.34.0",
    "pyyaml>=6.0.2",
    "tomli>=2.2.1",
    "httpx>=0.28.1",
    "apscheduler>=3.11.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "prophet>=1.1.6",
    "pandas>=2.2.3",
    "numpy>=2.2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "mypy>=1.15.0",
    "ruff>=0.11.0",
    "build>=1.2.2",
    "respx>=0.22.0",
]

[project.urls]
"Homepage" = "https://github.com/openremote/service-ml-forecast"
"Bug Tracker" = "https://github.com/openremote/service-ml-forecast/issues"

[tool.setuptools]
packages = ["service_ml_forecast"]
package-dir = {"service_ml_forecast" = "src/service_ml_forecast"}

[tool.ruff]
line-length = 120
target-version = "py310"
fix = true
unsafe-fixes = false

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C90",   # mccabe complexity
    "ERA",   # eradicate
    "PD",    # pandas-vet
    "PGH",   # pygrep-hooks
    "PL",    # pylint
    "RUF",   # ruff-specific rules
]
fixable = ["ALL"]

[tool.ruff.format]
line-ending = "auto"
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["service_ml_forecast"]
combine-as-imports = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[project.scripts]
service_ml_forecast = "service_ml_forecast.main:app"
